# tiva-cmake-seed

./: CMakeLists.txt  README.md
cmake/: FindTivaWare.cmake  TM4C123GH6PM.ld  tm4c123.cmake
include/app/: app.h
include/dbg/: dbg.h
src/: CMakeLists.txt  main.c  startup.c
src/app/: CMakeLists.txt  app.c
src/dbg/: CMakeLists.txt  dbg.c
tools/: debug.gdb  release.gdb
